--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,8 @@
 #contents {
   background-color: red;
   position: absolute;
-  bottom: 0;
+  top: 90%;
+  right: 10%;
   width: 80%;
-  height: 70%;
+  height: 100%;
 }
