--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,52 @@
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
 }
+
+.logo {
+  width: 100%;
+  height: 200px;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+}
+
+.card {
+  /* flexboxの子をスクロールさせるために必要 */
+  flex-shrink: 0;
+  width: 150px;
+  height: 200px;
+  margin-right: 12px;
+  border-radius: 20px;
+}
+
+.card.react {
+  background-color: blue;
+}
+
+.card.redux {
+  background-color: purple;
+}
+
+.card.webpack {
+  background-color: grey;
+}
+
+.card.babel {
+  background-color: yellow;
+}
+
+.icon {
+  width: 90px;
+  height: 90px;
+  border-radius: 45px;
+  margin-right: 12px;
+}
+
+.image-wrapper {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+}
