--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,25 @@
 #background {
   height: 100vh;
   width: 100vw;
-  background-color: azure;
+  background-color: ghostwhite;
   position: relative;
 }
 
 #contents {
-  background-color: red;
   position: absolute;
-  top: 90%;
-  right: 10%;
-  width: 80%;
+  right: 2.5%;
+  width: 95%;
   height: 100%;
+  top: 95%;
   -webkit-transition: 0.5s;
   -moz-transition: 0.5s;
   -o-transition: 0.5s;
+  background-color: white;
+  overflow-y: scroll;
+}
+
+#contents {
+  display: none;
 }
 
 .logo {
@@ -69,4 +74,18 @@
 
 section {
   margin-bottom: 36px;
+}
+
+#profimg {
+  width: 100%;
+  height: 200px;
+}
+
+.label {
+  font-size: 2rem;
+  margin-top: 20px;
+}
+
+.proftext {
+  font-size: 1.8rem;
 }
