--- a/src/style.css
+++ b/src/style.css
@@ -40,10 +40,16 @@
   height: 200px;
   margin-right: 12px;
   border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  color: white;
+  font-weight: bold;
 }
 
 .card.react {
-  background-color: blue;
+  background-color: deepskyblue;
 }
 
 .card.redux {
@@ -55,7 +61,7 @@
 }
 
 .card.babel {
-  background-color: yellow;
+  background-color: gold;
 }
 
 .icon {
