--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,7 @@
   -o-transition: 0.5s;
   background-color: white;
   overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 #contents {
@@ -31,6 +32,7 @@
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 .card {
